Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-backend-from-frontend
spec:
    podSelector:
        matchLabels:
            role: back-end-api
    policyTypes:
        - Ingress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        role: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-frontend-to-backend
spec:
    podSelector:
        matchLabels:
            role: front-end
    policyTypes:
        - Egress
    egress:
        - to:
              - podSelector:
                    matchLabels:
                        role: back-end-api
        - to:
              - namespaceSelector: {}
          ports:
              - protocol: UDP
                port: 53
              - protocol: TCP
                port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-admin-backend-from-frontend
spec:
    podSelector:
        matchLabels:
            role: admin-back-end-api
    policyTypes:
        - Ingress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        role: admin-front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-admin-frontend-to-backend
spec:
    podSelector:
        matchLabels:
            role: admin-front-end
    policyTypes:
        - Egress
    egress:
        - to:
              - podSelector:
                    matchLabels:
                        role: admin-back-end-api
        - to:
              - namespaceSelector: {}
          ports:
              - protocol: UDP
                port: 53
              - protocol: TCP
                port: 53
